--- a/test/.coveragerc
+++ b/test/.coveragerc
@@ -1,15 +1,9 @@
 [run]
 branch = False
 source =
-    py2neo
+    ipy2neo
 omit =
     */__main__.py
-    py2neo/compat.py
-    py2neo/meta.py
-    py2neo/experimental/*
-    py2neo/movies/*
-    py2neo/ogm/models/*
-    py2neo/vendor/*
     test/*
     */site-packages/*
     */dist-packages/*
